# churros-microservices-fastapi

./: .dockerignore  .gitignore  .pdm.toml  README.md  WORKSPACE.bazel  __init__.py  app.db  docker-compose.yaml  main.py  pyproject.pdm.bkp.toml  pyproject.toml  requirements.txt
.github/: tests.yml
.github/workflows/: python-app.yml  tests.yml  user-microservice-app.yaml
app/: __init__.py  bootstrap.py
app/__seedwork/domain/: exceptions.py  validators.py
app/api/resolvers/: schema.py
app/api/routers/: user.py
app/core/database/: models.py
app/user/domain/: entities.py  factories.py  repositories.py  services.py  validators.py  value_objects.py
app/user/domain/__tests__/: test_entities.py
app/user/domain/contracts/: gateways.py  repositories.py
app/user/infra/: repositories.py
app/user/infra/gateways/: auth.py  cloud_sync.py  jwt.py
app/user/usecases/: __init__.py  create.py  delete.py  find.py  find_many.py  inactivate.py  login.py  update.py
apps/user/: .env.example  Dockerfile  README.md  main.py  requirements.txt
apps/user/docs/: context.puml
apps/user/src/: bootstrap.py
docs/: class-diagram.puml  context.puml
libs/validators/: __init__.py  email.py
src/: __init__.py  bootstrap.py
src/__seedwork/domain/: exceptions.py  validators.py  value_objects.py
src/__shared/: entity.py  use_cases.py
src/__shared/domain/: entities.py  entity.py  exceptions.py  validators.py  value_objects.py
src/api/resolvers/: schema.py  user.py
src/api/resolvers/graphql/: user_types.py
src/api/routers/: errors.py  user.py
src/api/routers/dtos/: user.py
src/application/: errors.py
src/application/dtos/: user.py
src/application/routers/: user.py
src/application/usecases/create/: create_user_use_case.py
src/domain/__tests__/: test_user.py
src/domain/__tests__/e2e/: test_e2e_user.py  utils.py
src/domain/tests/: utils.py
src/domain/tests/e2e/: test_e2e_user.py  utils.py
src/domain/user/: entities.py  entity.py  factories.py  repositories.py  repository.py  services.py  validators.py  value_objects.py
src/domain/user/contracts/: repository.py
src/infra/: database.py
src/infra/gateways/: auth.py  jwt.py
src/infra/repositories/: user.py
src/usecases/create/: create_user_use_case.py
src/user/domain/: entities.py  errors.py  factories.py  repositories.py  services.py  user.py  validators.py  value_objects.py
src/user/infra/: __init__.py  auth.py  container.py  database.py  jwt.py  repositories.py
src/user/tests/: utils.py
src/user/usecases/: __init__.py  delete.py  find.py  inactivate.py  update.py
tests/: seeds.py  test_create_user_use_case.py  test_e2e_user.py  utils.py
tests/e2e/: test_e2e_auth.py  test_e2e_user.py
tests/graphql/: test_user_resolvers.py
tests/mocks/: user.py
tests/utils/: utils.py
tests/utils/mocks/: user.py
(+36 files in other folders)
