[tool.poetry]
name = "churrus-microservices"
version = "0.1.0"
description = ""
authors = ["GustavoValle"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
kink = "^0.6.5"
SQLAlchemy = "^1.4.45"
fastapi = "^0.88.0"
python-dotenv = "^0.21.0"
httpx = "^0.23.1"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pytest = "^7.2.0"
setuptools = "^65.6.3"
uvicorn = "^0.20.0"
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"
strawberry-graphql = {extras = ["fastapi"], version = "^0.151.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
